Updated github pages

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
     <!-- Bootstrap -->
-    <link href="./bootstrap.min.css" rel="stylesheet">
+    <link href="./assets/bootstrap.min.css" rel="stylesheet">
     <style type="text/css">
 body {
   font-family: "Open Sans", Helvetica, sans-serif;
@@ -82,7 +82,7 @@ h2 {
 
       				<h2>Promoting Apache and CentOS</h2>
       		<p>You are free to use the images below on Apache and CentOS Linux powered HTTP servers.  Thanks for using Apache and CentOS!</p>
-      	<p><a href="http://httpd.apache.org/"><img src="./apache_pb.gif" alt="[ Powered by Apache ]"></a> <a href="http://www.centos.org/"><img src="./poweredby.png" alt="[ Powered by CentOS Linux ]" height="31" width="88"></a></p>
+      	<p><a href="http://httpd.apache.org/"><img src="./assets/apache_pb.gif" alt="[ Powered by Apache ]"></a> <a href="http://www.centos.org/"><img src="./assets/poweredby.png" alt="[ Powered by CentOS Linux ]" height="31" width="88"></a></p>
   				</div>
       		</div>
         </div>
@@ -114,7 +114,7 @@ h2 {
       </div>
     </div>
   </div>
-  <script src="../dist/restaurance.bundle.js"></script>
+  <script src="./dist/restaurance.bundle.js"></script>
   <script>
     restaurance({}, ['.jumbotron', 'a', '.main', '.footer'], 15);
   </script>
